Code-Review Fixes: Font ClassPath, Path-Traversal, Dockerfile, Farbbedingung
- Font via ClassPathResource laden statt relativer Dateipfad (bricht in JAR/Docker)
- Path-Traversal-Guard in encodeLogoBase64 (analog FileStorageService)
- Playwright Chromium-Install im Dockerfile ergaenzt
- season-detail: Farb-Bedingung auf effectivePrimaryColor geaendert

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>